# I_wanna_riding_the_bike

./: .gitignore  CMakeLists.txt  Log.md  README.md  run.py  testLinkList.c
I_wanna_riding_the_bike/: CMakeLists.txt  main.cpp
I_wanna_riding_the_bike/image_loader/: welcomeScene.txt
I_wanna_riding_the_bike/include/: SDL_FontCache.h  error.h  log.h  particalSystem.h  particalSystem.hpp
I_wanna_riding_the_bike/include/controllers/: keyboard_config.hpp  keyboardcontroller.hpp
I_wanna_riding_the_bike/include/scenes/: welcomscene.hpp
I_wanna_riding_the_bike/src/: log.c  main.c  particalSystem.c
I_wanna_riding_the_bike/src/controllers/: keyboard_config.cpp  keyboardcontroller.cpp
I_wanna_riding_the_bike/src/scenes/: welcomscene.cpp
I_wanna_riding_the_bike/test/: CMakeLists.txt  particalSystemGUI.cpp  tLinkList.c  tSDL_Draw.c  tlog.c  tmmath.c  tparticalSystem.c  tparticalSystemCUI.c  tparticalSystemGUI.c  ttest.c
I_wanna_riding_the_bike/tools/: Makefile  cmake_install.cmake
cmake/: common-config.cmake  jsoncpp-config.cmake  sdl2-config.cmake  sdl2_image-config.cmake  sdl2_ttf-config.cmake
common/: CMakeLists.txt
common/GUITestframe/: CMakeLists.txt
common/GUITestframe/include/: guitestframework.hpp
common/GUITestframe/src/: guitestframework.cpp
common/include/: SDL_Draw.h  SDL_Draw.hpp  SDL_FontCache.h  collision.h  geomentry.h  header.h  linklist.h  log.h  mmath.h  mmath.hpp  unittest.h  unittest.hpp
common/include/engin/: SDL_Draw.h  SDL_Draw.hpp  animation.hpp  collisionapproch.hpp  controller.hpp  director.hpp  engin.hpp  error.hpp  geomentry.h  geomentry.hpp  imageEntrepot.hpp  imageinfoviewer.hpp  mmath.h  mmath.hpp  object.hpp  scene.hpp  shape.hpp  sprite.hpp  stage.hpp
common/include/engin/action/: action.hpp  animation.hpp  delay.hpp  loopaction.hpp  moveby.hpp  moveto.hpp  rotateby.hpp  rotateto.hpp  scaleto.hpp  sequence.hpp  skew.hpp  system_actions.hpp
common/include/engin/filesystem/: filenode.hpp  filesystem.hpp
common/include/engin/gui/: button.hpp  checkbox.hpp  groupbutton.hpp  gui_component.hpp  gui_event_callbacks.hpp  guiexception.hpp  guiheader.hpp  guiresourcemanager.hpp  ibutton.hpp  imagebutton.hpp  messagebox.hpp  radiobutton.hpp  slidebar.hpp
common/src/: SDL_Draw.c  SDL_FontCache.c  collision.c  geomentry.c  linklist.c  mmath.c
common/src/engin/: SDL_Draw.c  animation.cpp  collisionapproch.cpp  controller.cpp  director.cpp  engin.cpp  geomentry.cpp  imageEntrepot.cpp  imageinfoviewer.cpp  mmath.c  mmath.cpp  object.cpp  scene.cpp  sprite.cpp  stage.cpp
common/src/engin/action/: action.cpp  animation.cpp  delay.cpp  loopaction.cpp  moveby.cpp  moveto.cpp  rotateby.cpp  rotateto.cpp  scaleto.cpp  sequence.cpp  skew.cpp
common/src/engin/filesystem/: filenode.cpp  filesystem.cpp
common/src/engin/gui/: button.cpp  checkbox.cpp  groupbutton.cpp  gui_component.cpp  guiexception.cpp  guiresourcemanager.cpp  ibutton.cpp  imagebutton.cpp  messagebox.cpp  radiobutton.cpp  slidebar.cpp
common/test/: Animation.cpp  CMakeLists.txt  GUI_Components.cpp  RectRectCollision.cpp  SDL_Draw.cpp  functions.cpp  mmath.cpp  test.cpp
dependence/SDL-2.0/include/SDL2/: SDL_assert.h
dependence/SDL2_64/lib/cmake/SDL2/: sdl2-config.cmake
design/: UI库设计图.mdj  地图编辑器_原型设计.mp  地图编辑器结构体继承图.mdj  地图编辑器设计.md
resources/test/: test.json
test_include/: unittest.h
tools/: CMakeLists.txt
tools/ImageSheetor/: CMakeLists.txt  ReadMe.md  main.cpp
tools/ImageSheetor/include/: imagesheet.hpp  imagesheetwriter.hpp  main.hpp
tools/ImageSheetor/include/ImageSheetor/: imagesheet.hpp  imagesheetreader.hpp  imagesheetwriter.hpp  main.hpp  texturemanager.hpp
tools/ImageSheetor/src/: imagesheet.cpp  imagesheetreader.cpp  imagesheetwriter.cpp  texturemanager.cpp
tools/ImageSheetor/test/: CMakeLists.txt  ImageSheetReader.cpp  ImageSheetWriter.cpp
tools/MapEditor/: .gitignore  CMakeLists.txt  ReadMe.md  build.xml
tools/MapEditor/MapEditor/src/: Canva.java  Collision.java  GlobalFields.java  ImageSheetorParser.java  LayerPropertyTab.java  MainMenu.java  MainWindow.java  MapEditor.java  MapExporter.java  MapParser.java  MapSheetWindow.java  MapStruct.java  ProjectStruct.java  PropertyPanel.java  TopToolBar.java
tools/MapEditor/design/: MapBlockAction.yuml  UML.mdj
tools/MapEditor/src/: main.cpp
tools/MapEditor/test/: CMakeLists.txt
tools/cmake/: tool_common-config.cmake
tools/common/: CMakeLists.txt
tools/common/include/: app.hpp
tools/common/src/: app.cpp
tools/design/: MapBlock.yuml
tools/include/: MapBlock.h  MapBlockActions.h  UI.h
tools/src/: MapBlock.c  MapBlockActions.c  UI.c  main.c  main.cpp
tools/test/: CMakeLists.txt  tLinkList.c  tMapBlock.c  tMapBlockActions.c  tbutton.c  timage.c
